# SwitchStash

./: README.md  config.example.yaml  diff.py  hosthoover.py  inventory.py  networks.example.txt  pyproject.toml  requirements.txt  switchstash.py  test_hosthoover.py  test_inventory.py  test_switchstash.py
.github/: FUNDING.yml
docs/: authentication.md  configuration.md  devices.md  hooks.md
